--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ h1 {
 }
 
 h2 {
-    margin-bottom: 0.3rem;
+    margin: 0.3rem 0;
     font-size: 20px;
 }
 
@@ -56,3 +56,8 @@ span {
     font-weight: 700;
     line-height: 1.1;
 }
+
+p {
+    line-height: 1.7;
+}
+
