--- a/style.css
+++ b/style.css
@@ -15,8 +15,8 @@ html {
 body {
     margin: 0 auto;
     height: 100%;
-    width: 700px;
-    background-color: whitesmoke;
+    width: 850px;
+    background-color: white;
 }
 
 header {
@@ -58,6 +58,23 @@ span {
 }
 
 p {
-    line-height: 1.7;
+    line-height: 1.5;
 }
 
+div {
+    padding: 1rem;
+    background-color: rgb(236, 236, 236);
+    border-radius: 5px;
+    border: 1px solid white;
+    margin: 0.8rem 0;
+    font-family: monospace;
+    font-size: 0.8rem;
+}
+
+.grafico {
+    width: 410px;
+}
+
+.tabela {
+    width: 410px;
+}
